demokubernets/rollout-cannry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginxing-service
  namespace:  ngroshan
spec:
  selector:
    app:  mynginx
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
